[gd_scene load_steps=5 format=3 uid="uid://c5tyopn7hc5c"]

[ext_resource type="Script" uid="uid://b8u6021q168mj" path="res://Scripts/Objects/dhz_chained_trap.gd" id="1_2cisi"]
[ext_resource type="Texture2D" uid="uid://cnv0x4k5u14co" path="res://Graphics/Obstacles/DHZ_SwingChain.png" id="1_jpw3q"]
[ext_resource type="PackedScene" uid="uid://b5tqox7ea5irf" path="res://Entities/Hazards/dhz_spiked_platform.tscn" id="2_ueb11"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cisi"]
size = Vector2(96, 136)

[node name="DhzChainedTrap" type="Node2D"]
script = ExtResource("1_2cisi")

[node name="ChainLink" type="Sprite2D" parent="."]
texture = ExtResource("1_jpw3q")

[node name="DHZSpikedPlatform" parent="." instance=ExtResource("2_ueb11")]
position = Vector2(0, 128)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 68)
shape = SubResource("RectangleShape2D_2cisi")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
